--- a/CarDealership/View/BlankPage2.xaml
+++ b/CarDealership/View/BlankPage2.xaml
@@ -9,66 +9,92 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid>
 
 
-            <StackPanel  BorderThickness="3,3,3,3" BorderBrush="WhiteSmoke" Width="800" Height="510">
-                <controls:DataGrid ItemsSource="{Binding CarCollection}" x:Name="CarCollection" 
-                   SelectionMode="Multiple" DefaultOrderIndex="1" Width="800" Height="500">
-                    <controls:DataGrid.Columns>
-                        <controls:DataGridTextColumn Width="200" Header="ID" 
+        <StackPanel  BorderThickness="3,3,3,3" BorderBrush="WhiteSmoke" Width="600" Height="510">
+            <controls:DataGrid ItemsSource="{Binding CarCollection}" x:Name="DataGrid" 
+                   SelectionMode="Multiple" SelectedItem="{Binding SelectedCar, Mode=TwoWay}" DefaultOrderIndex="1" Width="600" Height="500">
+                <!--Here u can put the header-->
+                <controls:DataGrid.Columns>
+                    <controls:DataGridTextColumn Width="200" Header="ID" 
                   Binding="{Binding ID}"/>
-                        <controls:DataGridTextColumn Width="200" Binding="{Binding Brand}" 
+                    <controls:DataGridTextColumn Width="200" Binding="{Binding Brand}" 
                   IsAscendingDefault="False">
-                            <controls:DataGridTextColumn.Header>
-                                <TextBlock Text="Brand" Foreground="Green" />
-                            </controls:DataGridTextColumn.Header>
-                        </controls:DataGridTextColumn>
-                        <controls:DataGridTextColumn Width="200" Header="Name" 
+                        <controls:DataGridTextColumn.Header>
+                            <TextBlock Text="Brand" Foreground="Green" />
+                        </controls:DataGridTextColumn.Header>
+                    </controls:DataGridTextColumn>
+                    <controls:DataGridTextColumn Width="200" Header="Name" 
                   Binding="{Binding Name}" />
-                        <controls:DataGridTextColumn Width="200" Header="Color" 
-                  Binding="{Binding Brand}" />
-                    </controls:DataGrid.Columns>
+                </controls:DataGrid.Columns>
 
-                    <controls:DataGrid.ItemDetailsTemplate>
-                        <DataTemplate>
-                            <!--Here u can put the Details if u want-->
-                            <Grid Margin="10,10,10,5">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-                                <StackPanel HorizontalAlignment="Left" Grid.Column="0">
-                                        <TextBlock Text="Details: " FontWeight="Bold" FontSize="15"/>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Color:" Width="50"/>
-                                        <TextBlock Text="{Binding Color}" Width="100"/>
-                                    </StackPanel>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Year:" Width="50"/>
-                                        <TextBlock Text="{Binding Year}" Width="100" />
-                                    </StackPanel>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Comment:" Width="80"/>
-                                        <TextBlock Text="{Binding Comment}" Width="100"/>
-                                    </StackPanel>
+                <controls:DataGrid.ItemDetailsTemplate>
+                    <DataTemplate>
+                        <!--Here u can put the Details if u want-->
+                        <Grid Margin="10,10,10,5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <StackPanel HorizontalAlignment="Left" Grid.Column="0">
+                                <TextBlock Text="Details: " FontWeight="Bold" FontSize="15"/>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Color:" Width="50"/>
+                                    <TextBlock Text="{Binding Color}" Width="100"/>
                                 </StackPanel>
-                                <StackPanel HorizontalAlignment="Right" Grid.Column="1">
-                                    <Button Content="Sell"
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Year:" Width="50"/>
+                                    <TextBlock Text="{Binding Year}" Width="100" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Price:" Width="80"/>
+                                    <TextBlock Text="{Binding Price}" Width="200"/>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Comment:" Width="80"/>
+                                    <TextBlock Text="{Binding Comment}" Width="200"/>
+                                </StackPanel>
+                            </StackPanel>
+                            <!--<StackPanel HorizontalAlignment="Right" Grid.Column="1">
+                                        <Button Content="Sell"
                                             HorizontalAlignment="Right"
                                             VerticalAlignment="top"
                                             Command="{Binding CreateInvoiceWithSelectedCar}"/>
-                                    <Button Content="Delete"
+                                        <Button x:Name="Delete2" 
+                                            Content="Delete"
                                             HorizontalAlignment="Right"
                                             Margin="0,10,0,0"
                                             VerticalAlignment="Top"
-                                            Command="{Binding DeleteCar}"/>
-                                </StackPanel>
-                            </Grid>
-                        </DataTemplate>
-                    </controls:DataGrid.ItemDetailsTemplate>
-                </controls:DataGrid>
+                               
+                                            Command="{Binding ElementName=DataGrid, Path=DataContext.DeleteCar}">
+                                            <Button.DataContext>
+                                                <ViewModel:RegisterCarViewModel/>
+                                            </Button.DataContext>
+                                        </Button>
+                                    </StackPanel>-->
+                        </Grid>
+                    </DataTemplate>
+                </controls:DataGrid.ItemDetailsTemplate>
+            </controls:DataGrid>
+        </StackPanel>
+        <!--DataGrid-End-->
+        <!--<HyperlinkButton Content="" HorizontalAlignment="Left" Margin="1056,257,0,0" VerticalAlignment="Top"/>-->
+        <StackPanel HorizontalAlignment="Left" Height="292" Margin="156,113,0,0" VerticalAlignment="Top" Width="187">
+            <TextBox Text="{Binding Name, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Name"/>
+            <TextBox Text="{Binding Brand, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Brand"/>
+            <TextBox Text="{Binding Year, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Year"/>
+            <TextBox Text="{Binding Color, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Color"/>
+            <TextBox Text="{Binding Price, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Price"/>
+            <TextBox Text="{Binding Comment, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Comment"/>
+            <TextBox Text="{Binding ImagePath, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Image Name" BorderBrush="Black" SelectionHighlightColor="#FF32BEA6"/>
+            <Button x:Name="AddCarButton" Content="Add Car" Command="{Binding AddCar}" Width="150" Background="#32BEA6" BorderBrush="#FF32BEA6" BorderThickness="2,0,2,2" Foreground="Black"/>
+        </StackPanel>
+            <!--AppBar-Begin-->
+            <StackPanel Orientation="Horizontal" Margin="340,0,0,50" Height="50" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                <AppBarButton Icon = "Delete" Command="{Binding DeleteCar}"/>
+                <AppBarSeparator/>
+                <AppBarButton Icon = "Shop" Command="{Binding CreateInvoiceWithSelectedCar}"/>
             </StackPanel>
-        </Grid>
+       
     </Grid>
 </Page>
