--- a/CarDealership/View/RegisterCarPage.xaml
+++ b/CarDealership/View/RegisterCarPage.xaml
@@ -12,24 +12,13 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <StackPanel Orientation = "Horizontal" VerticalAlignment="Bottom" Margin="50,0,0,0" Height="40" Width="300" HorizontalAlignment="Left">
-
-            <!--<AppBarButton Icon = "Like" > <TextBox Text="sadsa"></TextBox></AppBarButton>
-            <AppBarButton Icon = "Dislike" />
-            <AppBarSeparator/>
-            <AppBarButton Icon = "Accept" />-->
-            <!--
-            <AppBarButton Icon = "Add" />
-            <AppBarSeparator/>
-            <AppBarButton Icon ="Accept"/>-->
-
-        </StackPanel>
         <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  IsPaneOpen="False" 
 			CompactPaneLength="50" OpenPaneLength="150">
             <SplitView.DataContext>
                 <ViewModel:NavigationViewModel/>
             </SplitView.DataContext>
             <!--The pane represents the menu that you want to be able to interact with, and the content represents the main content of your page.-->
+<!--SplitviewPane-Begin-->
             <SplitView.Pane>
                 <StackPanel Background="Silver">
                     <StackPanel Orientation="Horizontal" Background="#32BEA6">
@@ -73,100 +62,91 @@
                     </StackPanel>
                 </StackPanel>
             </SplitView.Pane>
-            <Grid>
-                <Grid.DataContext>
-                    <ViewModel:RegisterCarViewModel/>
-                </Grid.DataContext>
-                <!--DataGrid-->
-                <StackPanel  BorderThickness="3,3,3,3" BorderBrush="WhiteSmoke" Width="800" Height="510">
-                    <controls:DataGrid ItemsSource="{Binding CarCollection}" x:Name="DataGrid" 
-                   SelectionMode="Multiple" SelectedItem="{Binding SelectedCar, Mode=TwoWay}" DefaultOrderIndex="1" Width="800" Height="500">
-                        <controls:DataGrid.Columns>
-                            <controls:DataGridTextColumn Width="200" Header="ID" 
+<!--SplitViewPane - End-->
+<!--SplitviewContent - Begin-->
+            <SplitView.Content>
+                <Grid>
+                    <Grid.DataContext>
+                        <ViewModel:RegisterCarViewModel/>
+                    </Grid.DataContext>
+                    <!--DataGrid-->
+                    <StackPanel  BorderThickness="3,3,3,3" BorderBrush="WhiteSmoke" Width="600" Height="510">
+                        <controls:DataGrid ItemsSource="{Binding CarCollection}" x:Name="DataGrid" 
+                   SelectionMode="Multiple" SelectedItem="{Binding SelectedCar, Mode=TwoWay}" DefaultOrderIndex="1" Width="600" Height="500">
+                            <!--Here u can put the header-->
+                            <controls:DataGrid.Columns>
+                                <controls:DataGridTextColumn Width="200" Header="ID" 
                   Binding="{Binding ID}"/>
-                            <controls:DataGridTextColumn Width="200" Binding="{Binding Brand}" 
+                                <controls:DataGridTextColumn Width="200" Binding="{Binding Brand}" 
                   IsAscendingDefault="False">
-                                <controls:DataGridTextColumn.Header>
-                                    <TextBlock Text="Brand" Foreground="Green" />
-                                </controls:DataGridTextColumn.Header>
-                            </controls:DataGridTextColumn>
-                            <controls:DataGridTextColumn Width="200" Header="Name" 
+                                    <controls:DataGridTextColumn.Header>
+                                        <TextBlock Text="Brand" Foreground="Green" />
+                                    </controls:DataGridTextColumn.Header>
+                                </controls:DataGridTextColumn>
+                                <controls:DataGridTextColumn Width="200" Header="Name" 
                   Binding="{Binding Name}" />
-                            <controls:DataGridTextColumn Width="200" Header="Color" 
-                  Binding="{Binding Brand}" />
-                        </controls:DataGrid.Columns>
+                            </controls:DataGrid.Columns>
 
-                        <controls:DataGrid.ItemDetailsTemplate>
-                            <DataTemplate>
-                                <!--Here u can put the Details if u want-->
-                                <Grid Margin="10,10,10,5">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <StackPanel HorizontalAlignment="Left" Grid.Column="0">
-                                        <TextBlock Text="Details: " FontWeight="Bold" FontSize="15"/>
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Color:" Width="50"/>
-                                            <TextBlock Text="{Binding Color}" Width="100"/>
+                            <controls:DataGrid.ItemDetailsTemplate>
+                                <DataTemplate>
+                                    <!--Here u can put the Details if u want-->
+                                    <Grid Margin="10,10,10,5">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <StackPanel HorizontalAlignment="Left" Grid.Column="0">
+                                            <TextBlock Text="Details: " FontWeight="Bold" FontSize="15"/>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="Color:" Width="50"/>
+                                                <TextBlock Text="{Binding Color}" Width="100"/>
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="Year:" Width="50"/>
+                                                <TextBlock Text="{Binding Year}" Width="100" />
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="Price:" Width="80"/>
+                                                <TextBlock Text="{Binding Price}" Width="200"/>
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="Comment:" Width="80"/>
+                                                <TextBlock Text="{Binding Comment}" Width="200"/>
+                                            </StackPanel>
                                         </StackPanel>
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Year:" Width="50"/>
-                                            <TextBlock Text="{Binding Year}" Width="100" />
-                                        </StackPanel>
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Price:" Width="80"/>
-                                            <TextBlock Text="{Binding Price}" Width="200"/>
-                                        </StackPanel>
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Comment:" Width="80"/>
-                                            <TextBlock Text="{Binding Comment}" Width="200"/>
-                                        </StackPanel>
-                                    </StackPanel>
-                                    <StackPanel HorizontalAlignment="Right" Grid.Column="1">
-                                        <Button Content="Sell"
-                                            HorizontalAlignment="Right"
-                                            VerticalAlignment="top"
-                                            Command="{Binding CreateInvoiceWithSelectedCar}"/>
-                                        <Button x:Name="Delete2" 
-                                            Content="Delete"
-                                            HorizontalAlignment="Right"
-                                            Margin="0,10,0,0"
-                                            VerticalAlignment="Top"
-                               
-                                            Command="{Binding ElementName=DataGrid, Path=DataContext.DeleteCar}">
-                                            <Button.DataContext>
-                                                <ViewModel:RegisterCarViewModel/>
-                                            </Button.DataContext>
-                                        </Button>
-                                    </StackPanel>
-                                </Grid>
-                            </DataTemplate>
-                        </controls:DataGrid.ItemDetailsTemplate>
-                    </controls:DataGrid>
-                </StackPanel>
-                <!--DataGrid-End-->
-                <HyperlinkButton Content="" HorizontalAlignment="Left" Margin="1056,257,0,0" VerticalAlignment="Top"/>
-                <StackPanel HorizontalAlignment="Left" Height="292" Margin="156,113,0,0" VerticalAlignment="Top" Width="187">
-                    <TextBox Text="{Binding Name, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Name"/>
-                    <TextBox Text="{Binding Brand, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Brand"/>
-                    <TextBox Text="{Binding Year, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Year"/>
-                    <TextBox Text="{Binding Color, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Color"/>
-                    <TextBox Text="{Binding Price, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Price"/>
-                    <TextBox Text="{Binding Comment, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Comment"/>
-                    <TextBox Text="{Binding ImagePath, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Image Name" BorderBrush="Black" SelectionHighlightColor="#FF32BEA6"/>
-                    <Button x:Name="AddCarButton" Content="Add Car" Command="{Binding AddCar}" Width="150" Background="#32BEA6" BorderBrush="#FF32BEA6" BorderThickness="2,0,2,2" Foreground="Black"/>
-                </StackPanel>
-                <StackPanel HorizontalAlignment="Left" Height="112" Margin="936,247,0,0" VerticalAlignment="Top" Width="104">
-
-                    <Button x:Name="Delete" Content="DeleteCar" HorizontalAlignment="Left" Command="{Binding DeleteCar,Mode=TwoWay}" VerticalAlignment="Top" Background="#32BEA6"/>
-                    <Button x:Name="CreatInvoice" Content="CreateInvoice" HorizontalAlignment="Stretch" Command="{Binding CreateInvoiceWithSelectedCar,Mode=TwoWay}" VerticalAlignment="Stretch" Background="#32BEA6"/>
-                </StackPanel>
-                <StackPanel HorizontalAlignment="Right" Height="64" Margin="0,71,367,0" VerticalAlignment="Top" Width="437" Orientation="Horizontal">
-                    <TextBox PlaceholderText="Find Car" Width="250" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Text="{Binding searchforcar, Mode=TwoWay}"/>
-                    <Button x:Name="Search" Content="Search" HorizontalAlignment="Stretch" Command="{Binding searchCar}" VerticalAlignment="Top" Height="32" Width="100" Background="#32BEA6"/>
-                </StackPanel>
-            </Grid>
+                                    </Grid>
+                                </DataTemplate>
+                            </controls:DataGrid.ItemDetailsTemplate>
+                        </controls:DataGrid>
+                    </StackPanel>
+                    <!--DataGrid-End-->
+<!--Inputs-Begin-->
+                    <!--<HyperlinkButton Content="" HorizontalAlignment="Left" Margin="1056,257,0,0" VerticalAlignment="Top"/>-->
+                    <StackPanel HorizontalAlignment="Left" Height="292" Margin="156,113,0,0" VerticalAlignment="Top" Width="187">
+                        <TextBox Text="{Binding Name, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Name"/>
+                        <TextBox Text="{Binding Brand, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Brand"/>
+                        <TextBox Text="{Binding Year, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Year"/>
+                        <TextBox Text="{Binding Color, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Color"/>
+                        <TextBox Text="{Binding Price, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Price"/>
+                        <TextBox Text="{Binding Comment, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Comment"/>
+                        <TextBox Text="{Binding ImagePath, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Image Name" BorderBrush="Black" SelectionHighlightColor="#FF32BEA6"/>
+                        <Button x:Name="AddCarButton" Content="Add Car" Command="{Binding AddCar}" Width="150" Background="#32BEA6" BorderBrush="#FF32BEA6" BorderThickness="2,0,2,2" Foreground="Black"/>
+                    </StackPanel>
+<!--Inputs-End-->
+                    <!--AppBar-Begin-->
+                    <StackPanel Orientation="Horizontal" Margin="315,0,0,40" Height="50" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                        <AppBarButton Icon = "Delete" Command="{Binding DeleteCar}"/>
+                        <AppBarSeparator/>
+                        <AppBarButton Icon = "Shop" Command="{Binding CreateInvoiceWithSelectedCar}"/>
+                    </StackPanel>
+                    <!--AppBar-End-->
+                    <StackPanel HorizontalAlignment="Right" Height="64" Margin="0,71,367,0" VerticalAlignment="Top" Width="437" Orientation="Horizontal">
+                        <TextBox PlaceholderText="Find Car" Width="250" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Text="{Binding searchforcar, Mode=TwoWay}"/>
+                        <Button x:Name="Search" Content="Search" HorizontalAlignment="Stretch" Command="{Binding searchCar}" VerticalAlignment="Top" Height="32" Width="100" Background="#32BEA6"/>
+                    </StackPanel>
+                </Grid>
+            </SplitView.Content>
+<!--SplitviewContent-End-->
         </SplitView>
     </Grid>
 </Page>
